About Kalle description created and view adjusted. About Kombucha descrition created and view adjusted. Google map embedded to locations page.

--- a/html/aboutKalle.html
+++ b/html/aboutKalle.html
@@ -8,9 +8,9 @@
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/aboutKalle.css" />
-    <link rel="stylesheet" href="../css/global.css" />
-    <link rel="stylesheet" href="../css/main-page.css" />
+    <link rel="stylesheet" href="../css/aboutKalle.css"/>
+    <link rel="stylesheet" href="../css/global.css"/>
+    <link rel="stylesheet" href="../css/main-page.css"/>
 
 
     <title>About Kalle</title>
@@ -24,7 +24,7 @@
                     alt="Kalle small logo"
                     class="nav__logo"
                     id="logo"
-                    data-version-number = "3.0"
+                    data-version-number="3.0"
             /></a>
 
         <ul class="nav__links">
@@ -49,10 +49,10 @@
             </li>
             <li class="nav__item">
                 <button class="btn btn-default" onclick="window.location='login.html'" type="button"
-                >  <i class="fa-solid fa-cart-shopping"></i>
+                ><i class="fa-solid fa-cart-shopping"></i>
                 </button>
                 <button class="btn btn-default" onclick="window.location='login.html'" type="button"
-                > <i class="fa-solid fa-user"></i>
+                ><i class="fa-solid fa-user"></i>
                 </button>
             </li>
         </ul>
@@ -63,42 +63,67 @@
 <section class="sectionKalle">
     <div class="section__titleK">
 
+        <h2 class="section__descriptionK">Kalle</h2>
         <img src="../img/kallePhoto/KallePhoto.png" alt="Terracotta female statue" class="frame">
 
-        <h2 class="section__descriptionK">Kalle</h2>
         <h3 class="section__headerK">
-            Kalle is the new hot shot on the kombucha scene.
+            Kalle is the new hot shot on the kombucha scene╰(*°▽°*)╯
         </h3>
-        <h3 class="section__header">
-            STUFFFSTUFFFSTUFFFSTUFFFSTUFFFSTUFFFSTUFFFSTUFFFSTUFFFSTUFFF</h3>
-        <h3 class="section__header"
-        > AMAzingAMAzingAMAzingAMAzingAMAzingAMAzingAMAzingAMAzing</h3>
-        <h3 class="section__header"
-        > wowowowowowowowowowowowowowowowowowowowo</h3>
+        <p class="p">
+            In the past few months, he has started kombucha manufacturing facility to test his brand on the big market.
+            His idea came from the pure curiosity of
+            experimenting on flavors, a combination he enjoyed for a long time. It wasn't his first idea to produce
+            his own products, but the timing was off with one of his local bottling companies and other suppliers in
+            the brewing industry, causing him to rethink his ideas.<br>
+            After careful research, kombucha became a definite possibility. He was inspired by his wife who drank it
+            on a regular basis for its health benefits.
+            He started experimenting in his home kitchen with real sugar, whole leaf green tea, and spirulina, a
+            type of blue-green algae, a functional ingredient he uses in most of his flavors. After experimenting
+            with a lot of different ingredients and his wife was born the Kalle's Kombucha Company.<br>
+            "With spirulina, you're looking at five times the protein of soy protein, which is eight times the
+            protein of chicken, and also the omega-3s, but in such a lesser quantity," Kalle says. "So, my goal in
+            making this product was to provide a product that is highly beneficial for the consumer."
+            What he experienced after creating his own formula for kombucha was "magnificent" customer reaction. As
+            the brand started gaining traction in the local market, he decided to expand his business to a bigger
+            facility.<br>
+            The company certified and audited by the NSF International. They met their goal and now
+            have a facility with four fermenters for kombucha and two different processing machines. They test each
+            batch for chemical, microbiological, and physical parameters, which they created with their own
+            proprietary formulas.
+            "As far as sustainability is concerned, we are definitely looking into organic options. In the long run,
+            that is really our goal," Kalle says.
+            Once he comes up with a new flavor, Kalle makes samples by first making it to the store, where the
+            customer can get to taste the latest type of kombucha. Also, here on the official Kalle's Kombucha site
+            you have the chance to order any of the available <a class="navK" href="products.html">products.</a>
+        </p>
+        <h3 class="section__headerK">Fun fact</h3>
+        <p class="p">Kalle is a masculine given name of North Germanic origin, a variation of Karl. In Sweden, people
+            named Karl are commonly nicknamed Kalle. The name is also found in Finland and Estonia.
+        </p>
     </div>
 </section>
 
 <footer>
-    <section class="footerK" >
+    <section class="footerK">
         <div class="containerSoMe">
             <div class="section__title">
-            <h3 class="footer__link">
-                Find us @
-            </h3>
-            <a href="https://www.facebook.com/"  class="btn footer__btn"
-            > <i class="fa-brands fa-facebook" id="facebook"></i>
-            </a>
-            <a  href="https://www.instagram.com/"  class="btn footer__btn"
-            > <i class="fa-brands fa-instagram" id="apple"></i>
-            </a>
-            <a href="https://twitter.com/" class="btn footer__btn"
-            > <i class="fa-brands fa-twitter" id="twitter"></i>
-            </a>
-            <a href="https://www.linkedin.com/" class="btn footer__btn"
-            > <i class="fa-brands fa-linkedin" id="github"></i>
-            </a>
+                <h3 class="footer__link">
+                    Find us @
+                </h3>
+                <a href="https://www.facebook.com/" class="btn footer__btn"
+                > <i class="fa-brands fa-facebook" id="facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/" class="btn footer__btn"
+                > <i class="fa-brands fa-instagram" id="apple"></i>
+                </a>
+                <a href="https://twitter.com/" class="btn footer__btn"
+                > <i class="fa-brands fa-twitter" id="twitter"></i>
+                </a>
+                <a href="https://www.linkedin.com/" class="btn footer__btn"
+                > <i class="fa-brands fa-linkedin" id="github"></i>
+                </a>
 
-            <p class="footer__copyright">© 2022 Kalle's Kombucha</p>
+                <p class="footer__copyright">© 2022 Kalle's Kombucha</p>
             </div>
         </div>
     </section>
