--- a/html/aboutKombucha.html
+++ b/html/aboutKombucha.html
@@ -8,23 +8,23 @@
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/aboutKombucha.css" />
-    <link rel="stylesheet" href="../css/global.css" />
-    <link rel="stylesheet" href="../css/main-page.css" />
+    <link rel="stylesheet" href="../css/aboutKombucha.css"/>
+    <link rel="stylesheet" href="../css/global.css"/>
+    <link rel="stylesheet" href="../css/main-page.css"/>
 
 
     <title>About Kombucha</title>
 </head>
 <body>
 <header class="headerK">
-    <nav class="nav" >
+    <nav class="nav">
         <a onclick="window.location='main-page.html'" type="button">
             <img
                     src="../img/logos/Logo_small.bmp"
                     alt="Kalle small logo"
                     class="nav__logo"
                     id="logo"
-                    data-version-number = "3.0"
+                    data-version-number="3.0"
             /></a>
 
         <ul class="nav__links">
@@ -49,10 +49,10 @@
             </li>
             <li class="nav__item">
                 <button class="btn btn-default" onclick="window.location='login.html'" type="button"
-                >  <i class="fa-solid fa-cart-shopping"></i>
+                ><i class="fa-solid fa-cart-shopping"></i>
                 </button>
                 <button class="btn btn-default" onclick="window.location='login.html'" type="button"
-                > <i class="fa-solid fa-user"></i>
+                ><i class="fa-solid fa-user"></i>
                 </button>
             </li>
         </ul>
@@ -62,30 +62,71 @@
 <section class="sectionKalle">
     <div class="section__titleK">
 
-
-        <h2 class="section__descriptionK">Kombucha</h2>
+        <h2 class="section__descriptionK">About Kombucha</h2>
         <div id="frame">
             <div id="border">
                 <img src="../img/kallePhoto/teaField.png">
             </div><!-- #border -->
         </div><!-- #frame -->
+
         <h3 class="section__headerK">
-            Kombucha is fermented tea
+            What is Kombucha?
         </h3>
-        <h3 class="section__header">
-            tastes good tastes good tastes good tastes good</h3>
-        <h3 class="section__header"
-        > brewing brewing brewin brewing brewing brewing </h3>
+        <p class="p">
+            The short answer is Kombucha is fermented tea!
+            In a bit longer version, we can first look at regular teas. Tea leaves are always soaked in water, and while
+            in the kettle they are sometimes cooled by
+            pressing with a bit of pressure to prevent over-brewing. At the end of the boil, the water is cooled so it’s
+            at least 70 degrees. Then the tea leaves are squeezed
+            between the kettle and the wall of the refrigerator.
+            The pressing creates the liquids that are eventually consumed during the brewing process.
+            How does Kombucha Compare To Other teas? It is fermented !
+            Yes, it is fermented tea, meaning it is grown and brewed at a slightly elevated temperature and fermented
+            for many months in the same way it is grown, which means Kombucha can have a different flavor and a
+            different outcome compared to some other teas, as they might not ferment as well.
+            But the result is a more potent tea. And once it ferments, the tea stays in the bottle for several weeks and
+            continues to ferment in the refrigerator.
+            At the end, the final product has a light and intense flavor.
+            Similar to cider and beer, the process of making kombucha gives it many positive characteristics that
+            improve its performance in the body.
+        <p class="p">
+            Benefits:<br>
+            The main benefit of kombucha is that it has the same weight-loss capacity as green tea but contains no
+            tannin. As a result, it is a highly healthful beverage that is full of minerals and vitamins, but it has a
+            slight acidic taste, so it won’t harm or irritate the stomach, throat, and stomach, which are the ones that
+            we try to heal first during the diet.
+            Kombucha has a lot of good components that can help our digestion and digestive system stay strong,
+            nourished and healthy. In addition, it has tons of antioxidants and polyphenols (and therefore benefits the
+            body from the inside out).</p>
+        <p class="p">
+            Does it have sugar?<br>
+            Kombucha has zero sugar! Yes, the sugar is not in the kombucha.
+            Instead, the sugar is added when you add sugar and flavorings to your drink.
+            But you know what? The sugar and the juice from other fruits or vegetables aren’t necessary.
+            They can be avoided if we follow the same good nutrition principles.
+        <p class="p">Wanna ready more about kombucha on Wikipedia? <a class="navK"
+                                                                      href="https://en.wikipedia.org/wiki/Kombucha">Here
+            it is!</a></p>
+        </p>
 
         <div id="frame">
             <div id="border">
                 <img src="../img/kallePhoto/bottle.png">
             </div><!-- #border -->
         </div><!-- #frame -->
-        <h3 class="section__header"
-        > history history history history</h3>
-        <h3 class="section__header"
-        > history history history history</h3>
+        <h3 class="section__headerK"
+        >History</h3>
+        <p class="p">Kombucha most likely originated in the Bohai Sea district in China. The drink was consumed in
+            Russia and from there entered the rest of Europe. Its consumption increased in the United States during the
+            early 21st century. Having an alcohol content of less than 0.5%, kombucha is not a federally regulated
+            beverage in the United States.
+            Prior to 2015, some commercially available kombucha brands were found to contain alcohol content exceeding
+            this threshold, sparking the development of new testing methods. With rising popularity in developed
+            countries in the early 21st century, kombucha sales increased after it was marketed as an alternative to
+            beer and other alcoholic drinks in restaurants and pubs.
+            According to Grand View Research,[clarification needed] Kombucha had a global market size of US$1.64billion
+            as of 2019 and this was expected to grow to US$2.4billion by 2027.
+        </p>
 
         <div id="frame">
             <div id="border">
@@ -93,22 +134,19 @@
             </div><!-- #border -->
         </div><!-- #frame -->
     </div>
-
-    <h3 class="section__header"
-    > Kombucha today</h3>
 </section>
 
 <footer>
-    <section class="footerK" >
+    <section class="footerK">
         <div class="containerSoMe">
             <div class="section__title">
                 <h3 class="footer__link">
                     Find us @
                 </h3>
-                <a href="https://www.facebook.com/"  class="btn footer__btn"
+                <a href="https://www.facebook.com/" class="btn footer__btn"
                 > <i class="fa-brands fa-facebook" id="facebook"></i>
                 </a>
-                <a  href="https://www.instagram.com/"  class="btn footer__btn"
+                <a href="https://www.instagram.com/" class="btn footer__btn"
                 > <i class="fa-brands fa-instagram" id="apple"></i>
                 </a>
                 <a href="https://twitter.com/" class="btn footer__btn"
