--- a/html/locations.html
+++ b/html/locations.html
@@ -9,13 +9,14 @@
             rel="stylesheet"
     />
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../css/locations.css" />
-    <link rel="stylesheet" href="../css/global.css" />
-    <link rel="stylesheet" href="../css/main-page.css" />
+    <link rel="stylesheet" href="../css/locations.css"/>
+    <link rel="stylesheet" href="../css/global.css"/>
+    <link rel="stylesheet" href="../css/main-page.css"/>
 
 
     <title>Locations</title>
 </head>
+
 <body>
 <header class="headerK">
     <nav class="nav" id="nav">
@@ -25,7 +26,7 @@
                     alt="Kalle small logo"
                     class="nav__logo"
                     id="logo"
-                    data-version-number = "3.0"
+                    data-version-number="3.0"
             /></a>
 
         <ul class="nav__links">
@@ -50,10 +51,10 @@
             </li>
             <li class="nav__item">
                 <button class="btn btn-default" onclick="window.location='login.html'" type="button"
-                >  <i class="fa-solid fa-cart-shopping"></i>
+                ><i class="fa-solid fa-cart-shopping"></i>
                 </button>
                 <button class="btn btn-default" onclick="window.location='login.html'" type="button"
-                > <i class="fa-solid fa-user"></i>
+                ><i class="fa-solid fa-user"></i>
                 </button>
             </li>
         </ul>
@@ -66,6 +67,14 @@
         <img src="../img/kallePhoto/globe.png" alt="Terracotta female statue" class="frame">
 
         <h2 class="section__descriptionL">Locations</h2>
+
+        <div class="container">
+            <h2>Here you can visit our brewery</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2250.27722981016!2d12.528013574333714!3d55.6667791529427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4652539a65ca73c3%3A0x49961e37f46cbe42!2sBryggernes%20Plads%2C%20K%C3%B8benhavn!5e0!3m2!1shu!2sdk!4v1670516427347!5m2!1shu!2sdk"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
         <h3 class="section__headerL">
             Our wonderful product is sold by vendors all over the world.
         </h3>
@@ -194,16 +203,16 @@
 </section>
 
 <footer>
-    <section class="footerK" >
+    <section class="footerK">
         <div class="containerSoMe">
             <div class="section__title">
                 <h3 class="footer__link">
                     Find us @
                 </h3>
-                <a href="https://www.facebook.com/"  class="btn footer__btn"
+                <a href="https://www.facebook.com/" class="btn footer__btn"
                 > <i class="fa-brands fa-facebook" id="facebook"></i>
                 </a>
-                <a  href="https://www.instagram.com/"  class="btn footer__btn"
+                <a href="https://www.instagram.com/" class="btn footer__btn"
                 > <i class="fa-brands fa-instagram" id="apple"></i>
                 </a>
                 <a href="https://twitter.com/" class="btn footer__btn"
