--- a/html/admin/product/deleteProductPopUp.html
+++ b/html/admin/product/deleteProductPopUp.html
@@ -11,4 +11,4 @@
         </div>
     </div>
 
-<script src="../../../js/admin/deleteProduct.js"></script>
+<script src="../../../js/admin/product/deleteProduct.js"></script>
