--- a/html/admin/product/editProduct.html
+++ b/html/admin/product/editProduct.html
@@ -35,4 +35,4 @@
 
  </div>-->
 
-<script rel="stylesheet" src="../../../js/admin/editProduct.js" type="module" defer></script>
+<script rel="stylesheet" src="../../../js/admin/product/editProduct.js" type="module" defer></script>
