--- a/html/popUpPage.html
+++ b/html/popUpPage.html
@@ -33,4 +33,4 @@
         </div>
     </div>
 </div>
-<script src="../js/popups/productPopUpFetch.js" type="module" defer></script>
+<script src="../js/productPopUpFetch.js" type="module" defer></script>
