--- a/html/products.html
+++ b/html/products.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../css/products.css"/>
     <link rel="stylesheet" href="../css/productPopUpStyle.css"/>
 
-    <title>Kalle's Kombucha</title>
+    <title>Products</title>
 
 </head>
 
