--- a/html/admin/product/addProduct.html
+++ b/html/admin/product/addProduct.html
@@ -37,4 +37,4 @@
          </div>-->
 
 </div>
-<script rel="stylesheet" src="../../../js/admin/addProduct.js" type="module" defer></script>
+<script src="../../../js/admin/product/addProduct.js" type="module" defer></script>
