Make the connection between the login backend and the frontend.

--- a/html/login.html
+++ b/html/login.html
@@ -50,7 +50,7 @@
 
 </header>
 
-<body></body>
+<body>
 <div class="animated bounceInDown">
   <div class="container-login">
     <span class="error animated data" id="msg"></span>
