--- a/html/blog.html
+++ b/html/blog.html
@@ -40,9 +40,15 @@
                     <a href="contactInformation.html">Contact Information</a>
                 </div>
             </div>
-            <li class="nav__item">
-                <a class="nav__link" href="blog.html">Blog</a>
-            </li>
+                <div class="dropdown">
+                    <button class="dropbtn">Blog
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="blog.html">Blog</a>
+                        <a href="admin/blog/adminBlog.html">Admin Blog</a>
+                    </div>
+                </div>
             <li class="nav__item">
                 <button class="btn btn-default" onclick="window.location='login.html'" type="button"
                 ><i class="fa-solid fa-cart-shopping"></i>
