--- a/html/products.html
+++ b/html/products.html
@@ -33,9 +33,15 @@
                     data-version-number="3.0"
             /></a>
         <ul class="nav__links">
-            <li class="nav__item">
-                <a class="nav__link" href="products.html">Products</a>
-            </li>
+                <div class="dropdown">
+                    <button class="dropbtn">Products
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="products.html">Products</a>
+                        <a href="admin/product/adminProducts.html">Admin Products</a>
+                    </div>
+                </div>
             <li class="nav__item">
                 <a class="nav__link" href="locations.html">Locations</a>
             </li>
