Refactored html, img and css names to kebab case coding standard

--- a/html/admin/product/admin-product-popup.html
+++ b/html/admin/product/admin-product-popup.html
@@ -18,8 +18,8 @@
     <div class="description_column">
 
       <div class="closebtn">
-        <a href="adminProducts.html">
-          <img src="../../../img/icons/close_button.png" style="height: 7%; width: 7%">
+        <a href="admin-products.html">
+          <img src="../../../img/icons/close-button.png" style="height: 7%; width: 7%">
         </a>
       </div>
 
