--- a/html/admin/product/edit-product.html
+++ b/html/admin/product/edit-product.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../../../css/productPopUpStyle.css">
+<link rel="stylesheet" href="../../../css/product-popup-style.css">
 
 
 <div class="editProductBox">
