--- a/html/locations.html
+++ b/html/locations.html
@@ -22,7 +22,7 @@
     <nav class="nav" id="nav">
         <a onclick="window.location='main-page.html'" type="button">
             <img
-                    src="../img/logos/Logo_small.bmp"
+                    src="../img/logos/logo-small.bmp"
                     alt="Kalle small logo"
                     class="nav__logo"
                     id="logo"
@@ -41,9 +41,9 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="aboutKalle.html">Kalle</a>
-                    <a href="aboutKombucha.html">Kombucha</a>
-                    <a href="contactInformation.html">Contact Information</a>
+                    <a href="about-kalle.html">Kalle</a>
+                    <a href="about-kombucha.html">Kombucha</a>
+                    <a href="contact-information.html">Contact Information</a>
                 </div>
             </div>
             <li class="nav__item">
@@ -64,7 +64,7 @@
 <section class="sectionLoc">
     <div class="section__titleL">
 
-        <img src="../img/kallePhoto/globe.png" alt="Terracotta female statue" class="frame">
+        <img src="../img/kalle-photo/globe.png" alt="Terracotta female statue" class="frame">
 
         <h2 class="section__descriptionL">Locations</h2>
 
@@ -229,7 +229,6 @@
 </footer>
 
 <script src="../js/aboutKalle.js" type="module" defer></script>
-<script src="../js/locations.js" type="module" defer></script>
 
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
 </body>
