--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
   <nav class="nav">
     <a onclick="window.location='main-page.html'" type="button">
     <img
-            src="../img/logos/Logo_small.bmp"
+            src="../img/logos/logo-small.bmp"
             alt="Bankist logo"
             class="nav__logo"
             id="logo"
@@ -35,9 +35,9 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="aboutKalle.html">Kalle</a>
-          <a href="aboutKombucha.html">Kombucha</a>
-          <a href="contactInformation.html">Contact Information</a>
+          <a href="about-kalle.html">Kalle</a>
+          <a href="about-kombucha.html">Kombucha</a>
+          <a href="contact-information.html">Contact Information</a>
         </div>
       </div>
       <li class="nav__item">
