--- a/html/main-page.html
+++ b/html/main-page.html
@@ -22,7 +22,7 @@
   <nav class="nav">
     <a onclick="window.location='main-page.html'" type="button">
     <img
-            src="../img/logos/Logo_small.bmp"
+            src="../img/logos/logo-small.bmp"
             alt="Bankist logo"
             class="nav__logo"
             id="logo"
@@ -41,9 +41,9 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="aboutKalle.html">Kalle</a>
+          <a href="about-kalle.html">Kalle</a>
           <a href="#section--3">Kombucha</a>
-          <a href="contactInformation.html">Contact Information</a>
+          <a href="contact-information.html">Contact Information</a>
         </div>
       </div>
       <li class="nav__item">
@@ -63,7 +63,7 @@
   <div>
 
     <img
-            src="../img/logos/Logo_big.bmp"
+            src="../img/logos/logo-big.bmp"
             class="kalle_logo"
             alt="Kalle Logo"
     />
@@ -94,7 +94,7 @@
       Click here to read more about what Kombucha is, and about Kalles vision for
       the future of kombucha.
     </h3>
-   <button class="btnK" onclick="window.location='aboutKombucha.html'" type="button" > Tell me about this magical stuff
+   <button class="btnK" onclick="window.location='about-kombucha.html'" type="button" > Tell me about this magical stuff
    </button>
   </div>
 </section>
