--- a/html/products.html
+++ b/html/products.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="../css/global.css"/>
     <link rel="stylesheet" href="../css/products.css"/>
-    <link rel="stylesheet" href="../css/productPopUpStyle.css"/>
+    <link rel="stylesheet" href="../css/product-popup-style.css"/>
 
     <title>Products</title>
 
@@ -26,7 +26,7 @@
     <nav class="nav">
         <a onclick="window.location='main-page.html'" type="button">
             <img
-                    src="../img/logos/Logo_small.bmp"
+                    src="../img/logos/logo-small.bmp"
                     alt="Bankist logo"
                     class="nav__logo"
                     id="logo"
@@ -39,7 +39,7 @@
                     </button>
                     <div class="dropdown-content">
                         <a href="products.html">Products</a>
-                        <a href="admin/product/adminProducts.html">Admin Products</a>
+                        <a href="admin/product/admin-products.html">Admin Products</a>
                     </div>
                 </div>
             <li class="nav__item">
@@ -50,9 +50,9 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="aboutKalle.html">Kalle</a>
-                    <a href="aboutKombucha.html">Kombucha</a>
-                    <a href="contactInformation.html">Contact Information</a>
+                    <a href="about-kalle.html">Kalle</a>
+                    <a href="about-kombucha.html">Kombucha</a>
+                    <a href="contact-information.html">Contact Information</a>
                 </div>
             </div>
             <li class="nav__item">
