--- a/html/about-kalle.html
+++ b/html/about-kalle.html
@@ -8,7 +8,7 @@
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/aboutKalle.css"/>
+    <link rel="stylesheet" href="../css/about-kalle.css"/>
     <link rel="stylesheet" href="../css/global.css"/>
     <link rel="stylesheet" href="../css/main-page.css"/>
 
@@ -20,7 +20,7 @@
     <nav class="nav" id="nav">
         <a onclick="window.location='main-page.html'" type="button">
             <img
-                    src="../img/logos/Logo_small.bmp"
+                    src="../img/logos/logo-small.bmp"
                     alt="Kalle small logo"
                     class="nav__logo"
                     id="logo"
@@ -39,9 +39,9 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="aboutKalle.html">Kalle</a>
-                    <a href="aboutKombucha.html">Kombucha</a>
-                    <a href="contactInformation.html">Contact Information</a>
+                    <a href="about-kalle.html">Kalle</a>
+                    <a href="about-kombucha.html">Kombucha</a>
+                    <a href="contact-information.html">Contact Information</a>
                 </div>
             </div>
             <li class="nav__item">
@@ -64,7 +64,7 @@
     <div class="section__titleK">
 
         <h2 class="section__descriptionK">Kalle</h2>
-        <img src="../img/kallePhoto/KallePhoto.png" alt="Terracotta female statue" class="frame">
+        <img src="../img/kalle-photo/kalle-photo.png" alt="Terracotta female statue" class="frame">
 
         <h3 class="section__headerK">
             Kalle is the new hot shot on the kombucha scene╰(*°▽°*)╯
@@ -129,7 +129,6 @@
     </section>
 </footer>
 <script src="../js/aboutKalle.js" type="module" defer></script>
-<script src="../js/hideNavBar.js" type="module" defer></script>
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
 
 </body>
