--- a/html/about-kombucha.html
+++ b/html/about-kombucha.html
@@ -8,7 +8,7 @@
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/aboutKombucha.css"/>
+    <link rel="stylesheet" href="../css/about-kombucha.css"/>
     <link rel="stylesheet" href="../css/global.css"/>
     <link rel="stylesheet" href="../css/main-page.css"/>
 
@@ -20,7 +20,7 @@
     <nav class="nav">
         <a onclick="window.location='main-page.html'" type="button">
             <img
-                    src="../img/logos/Logo_small.bmp"
+                    src="../img/logos/logo-small.bmp"
                     alt="Kalle small logo"
                     class="nav__logo"
                     id="logo"
@@ -39,9 +39,9 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="aboutKalle.html">Kalle</a>
-                    <a href="aboutKombucha.html">Kombucha</a>
-                    <a href="contactInformation.html">Contact Information</a>
+                    <a href="about-kalle.html">Kalle</a>
+                    <a href="about-kombucha.html">Kombucha</a>
+                    <a href="contact-information.html">Contact Information</a>
                 </div>
             </div>
             <li class="nav__item">
@@ -65,7 +65,7 @@
         <h2 class="section__descriptionK">About Kombucha</h2>
         <div id="frame">
             <div id="border">
-                <img src="../img/kallePhoto/teaField.png">
+                <img src="../img/kalle-photo/tea-field.png">
             </div><!-- #border -->
         </div><!-- #frame -->
 
@@ -111,7 +111,7 @@
 
         <div id="frame">
             <div id="border">
-                <img src="../img/kallePhoto/bottle.png">
+                <img src="../img/kalle-photo/bottle.png">
             </div><!-- #border -->
         </div><!-- #frame -->
         <h3 class="section__headerK"
@@ -130,7 +130,7 @@
 
         <div id="frame">
             <div id="border">
-                <img src="../img/kallePhoto/walking.png">
+                <img src="../img/kalle-photo/walking.png">
             </div><!-- #border -->
         </div><!-- #frame -->
     </div>
@@ -163,7 +163,6 @@
 </footer>
 
 <script src="../js/aboutKalle.js" type="module" defer></script>
-<script src="../js/hideNavBar.js" type="module" defer></script>
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
 </body>
 </html>
