--- a/html/admin/product/admin-products.html
+++ b/html/admin/product/admin-products.html
@@ -18,7 +18,7 @@
     />
     <link rel="stylesheet" href="../../../css/global.css"/>
     <link rel="stylesheet" href="../../../css/products.css"/>
-    <link rel="stylesheet" href="../../../css/productPopUpStyle.css"/>
+    <link rel="stylesheet" href="../../../css/product-popup-style.css"/>
 
     <title>Products (Admin)</title>
 
@@ -28,7 +28,7 @@
     <nav class="nav">
         <a onclick="window.location='../../main-page.html'" type="button">
             <img
-                    src="../../../img/logos/Logo_small.bmp"
+                    src="../../../img/logos/logo-small.bmp"
                     alt="Bankist logo"
                     class="nav__logo"
                     id="logo"
@@ -42,7 +42,7 @@
                     </button>
                     <div class="dropdown-content">
                         <a href="../../products.html">Products</a>
-                        <a href="adminProducts.html">Admin Products</a>
+                        <a href="admin-products.html">Admin Products</a>
                     </div>
                 </div>
             </li>
@@ -54,19 +54,19 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="../../aboutKalle.html">Kalle</a>
-                    <a href="../../aboutKombucha.html">Kombucha</a>
-                    <a href="../../contactInformation.html">Contact Information</a>
+                    <a href="../../about-kalle.html">Kalle</a>
+                    <a href="../../about-kombucha.html">Kombucha</a>
+                    <a href="../../contact-information.html">Contact Information</a>
                 </div>
             </div>
             <li class="nav__item">
                 <a class="nav__link" href="../../blog.html">Blog</a>
             </li>
             <li class="nav__item">
-                <button class="btn btn-default" onclick="window.location='login.html'" type="button"
+                <button class="btn btn-default" onclick="window.location='../../login.html'" type="button"
                 ><i class="fa-solid fa-cart-shopping"></i>
                 </button>
-                <button class="btn btn-default" onclick="window.location='login.html'" type="button"
+                <button class="btn btn-default" onclick="window.location='../../login.html'" type="button"
                 ><i class="fa-solid fa-user"></i>
                 </button>
 
@@ -82,7 +82,6 @@
 
 <section>
     <div id="cont"></div>
-    </div>
 </section>
 
 <section class="section__description">
