--- a/html/contact-information.html
+++ b/html/contact-information.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/main-page.css" />
 
-
     <title>Contact</title>
 </head>
 
@@ -22,7 +21,7 @@
     <nav class="nav" >
         <a onclick="window.location='main-page.html'" type="button">
             <img
-                    src="../img/logos/Logo_small.bmp"
+                    src="../img/logos/logo-small.bmp"
                     alt="Kalle small logo"
                     class="nav__logo"
                     id="logo"
@@ -41,9 +40,9 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="aboutKalle.html">Kalle</a>
-                    <a href="aboutKombucha.html">Kombucha</a>
-                    <a href="contactInformation.html">Contact Information</a>
+                    <a href="about-kalle.html">Kalle</a>
+                    <a href="about-kombucha.html">Kombucha</a>
+                    <a href="contact-information.html">Contact Information</a>
                 </div>
             </div>
             <li class="nav__item">
@@ -114,7 +113,6 @@
 </footer>
 
 <script src="../js/aboutKalle.js" type="module" defer></script>
-<script src="../js/hideNavBar.js" type="module" defer></script>
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
 </body>
 </html>
