--- a/html/login.html
+++ b/html/login.html
@@ -64,7 +64,7 @@
     <form name="form1" class="box">
    <span></span>
       <h5>Sign in to your account.</h5>
-      <input type="text" id="username" name="username" placeholder="Email" autocomplete="off">
+      <input type="text" id="username" name="username" placeholder="Username" autocomplete="off">
       <i class="typcn typcn-eye" id="eye"></i>
       <input type="password" id="password" name="password" placeholder="Passsword" autocomplete="off">
       <label>
