Vendor added to locations

--- a/html/locations.html
+++ b/html/locations.html
@@ -85,120 +85,88 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </h3>
 
-        <h3 class="section__header">
-            Denmark</h3>
-        <h2>&nbsp;</h2>
+        <h3 class="section__header">Denmark</h3>
         <h2>Sjælland</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
-        <h3>xxxxxxxx</h3>
-        <h3>xxxxxxxx</h3>
-        <h3>xxxxxxxx</h3>
+        <h3>Kalles Kombucha</h3>
+        <h3>København Kombucha</h3>
         <h2>&nbsp;</h2>
         <h2>Fyn</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
-        <h3>xxxxxxxx</h3>
+        <h3>Odense Kombucha</h3>
+        <h3>Ringetea</h3>
         <h2>&nbsp;</h2>
         <h2>Jylland</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
-        <h3>xxxxxxxx</h3>
+        <h3>Wild Apple Kombucha</h3>
+        <h3>Raw Kultur ApS</h3>
         <h2>&nbsp;</h2>
         <h2>Bornholm</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
+        <h3>Røne Asian Drinks</h3>
         <h2>&nbsp;</h2>
         <h3 class="section__header">
             Sweden</h3>
-        <h2>&nbsp;</h2>
         <h2>Stockholm</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
-        <h3>xxxxxxxx</h3>
+        <h3>In The Mood For Tea</h3>
+        <h3>Nordik Kombucha AB</h3>
         <h2>&nbsp;</h2>
         <h2>Gothenburg</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
+        <h3>Göthe Tea</h3>
         <h2>&nbsp;</h2>
         <h2>Malmö</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
+        <h3>Ruth Kombucha</h3>
         <h2>&nbsp;</h2>
         <h3 class="section__header">
             Norway</h3>
-        <h2>&nbsp;</h2>
         <h2>Oslo</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
-        <h3>xxxxxxxx</h3>
+        <h3>Fuglen Kafé Roasters</h3>
+        <h3>Frogner Helsekost</h3>
         <h2>&nbsp;</h2>
         <h2>Bergen</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
+        <h3>Bergen Hus Kafé</h3>
         <h2>&nbsp;</h2>
         <h3 class="section__header">
             Germany</h3>
-        <h2>&nbsp;</h2>
         <h2>Berlin</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
-        <h3>xxxxxxxx</h3>
+        <h3>Das Ist Eine Kombucha</h3>
+        <h3>ManuTeeFaktur</h3>
         <h2>&nbsp;</h2>
         <h2>Frankfurt</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
+        <h3>Reform Haus</h3>
         <h2>&nbsp;</h2>
         <h3 class="section__header">
             Hungary</h3>
-        <h2>&nbsp;</h2>
         <h2>Budapest</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
-        <h3>xxxxxxxx</h3>
+        <h3>Horizont Café</h3>
+        <h3>Linka Eszem-Iszom</h3>
         <h2>&nbsp;</h2>
         <h2>Miskolc</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
+        <h3>Herbatár</h3>
         <h2>&nbsp;</h2>
         <h3 class="section__header">
             Brazil</h3>
-        <h2>&nbsp;</h2>
         <h2>São Paulo</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
-        <h3>xxxxxxxx</h3>
+        <h3>Kombucha Brazil</h3>
+        <h3>Fé Kafé</h3>
         <h2>&nbsp;</h2>
         <h2>Rio de Janeiro</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
+        <h3>Glut Glut Natural</h3>
         <h2>&nbsp;</h2>
         <h3 class="section__header">
             Japan</h3>
-        <h2>&nbsp;</h2>
         <h2>Tokyo</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
-        <h3>xxxxxxxx</h3>
+        <h3>Tokyo Honey Terrace</h3>
+        <h3>Bio c' Bon</h3>
         <h2>&nbsp;</h2>
         <h2>Kyoto</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
+        <h3>Obubu Teafarms</h3>
         <h2>&nbsp;</h2>
         <h3 class="section__header">
             USA</h3>
-        <h2>&nbsp;</h2>
         <h2>New York</h2>
-        <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
-        <h3>xxxxxxxx</h3>
+        <h3>Coastal Craft</h3>
+        <h3>Mombucha</h3>
         <h2>&nbsp;</h2>
         <h2>Los Angeles</h2>
+        <h3>Wholefood's Market</h3>
         <h2>&nbsp;</h2>
-        <h3>xxxxxxxx</h3>
-        <h2>&nbsp;</h2>
-
-
     </div>
 </section>
 
