Just some final touches :)

--- a/html/about-kombucha.html
+++ b/html/about-kombucha.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="../css/about-kombucha.css"/>
     <link rel="stylesheet" href="../css/global.css"/>
-    <link rel="stylesheet" href="../css/main-page.css"/>
+    <link rel="stylesheet" href="../../Final-Project-Frontend/css/main-page.css"/>
 
 
     <title>About Kombucha</title>
