--- a/html/locations.html
+++ b/html/locations.html
@@ -11,7 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../css/locations.css"/>
     <link rel="stylesheet" href="../css/global.css"/>
-    <link rel="stylesheet" href="../css/main-page.css"/>
+    <link rel="stylesheet" href="../../Final-Project-Frontend/css/main-page.css"/>
 
 
     <title>Locations</title>
