--- a/html/about-kalle.html
+++ b/html/about-kalle.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="../css/about-kalle.css"/>
     <link rel="stylesheet" href="../css/global.css"/>
-    <link rel="stylesheet" href="../css/main-page.css"/>
+    <link rel="stylesheet" href="../../Final-Project-Frontend/css/main-page.css"/>
 
 
     <title>About Kalle</title>
