--- a/html/admin/product/admin-products.html
+++ b/html/admin/product/admin-products.html
@@ -26,7 +26,7 @@
 
 <header class="product-header">
     <nav class="nav">
-        <a onclick="window.location='../../main-page.html'" type="button">
+        <a onclick="window.location='../../../../Final-Project-Frontend/html/main-page.html'" type="button">
             <img
                     src="../../../img/logos/logo-small.bmp"
                     alt="Bankist logo"
@@ -63,10 +63,10 @@
                 <a class="nav__link" href="../../blog.html">Blog</a>
             </li>
             <li class="nav__item">
-                <button class="btn btn-default" onclick="window.location='../../login.html'" type="button"
+                <button class="btn btn-default" onclick="window.location='../../../../Final-Project-Frontend/html/login.html'" type="button"
                 ><i class="fa-solid fa-cart-shopping"></i>
                 </button>
-                <button class="btn btn-default" onclick="window.location='../../login.html'" type="button"
+                <button class="btn btn-default" onclick="window.location='../../../../Final-Project-Frontend/html/login.html'" type="button"
                 ><i class="fa-solid fa-user"></i>
                 </button>
 
