--- a/html/contact-information.html
+++ b/html/contact-information.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="../css/contact.css" />
     <link rel="stylesheet" href="../css/global.css" />
-    <link rel="stylesheet" href="../css/main-page.css" />
+    <link rel="stylesheet" href="../../Final-Project-Frontend/css/main-page.css" />
 
     <title>Contact</title>
 </head>
