--- a/html/login.html
+++ b/html/login.html
@@ -8,7 +8,7 @@
           rel="stylesheet"
   />
   <link rel="stylesheet" href="../css/global.css"/>
-  <link rel="stylesheet" href="../css/login.css"/>
+  <link rel="stylesheet" href="../../Final-Project-Frontend/css/login.css"/>
 
   <title>Kalle's Kombucha login page</title>
 
