--- a/html/registration.html
+++ b/html/registration.html
@@ -68,7 +68,7 @@
             <input type="password" name="password" placeholder="Passsword" id="pwd" autocomplete="off" required minlength="8" maxlength="32" title="Password not long enough">
             <input type="submit" value="Register" class="btn1">
         </form>
-        <a href="login.html" class="doeshave">You already have an account? Log in</a>
+        <a href="../../Final-Project-Frontend/html/login.html" class="doeshave">You already have an account? Log in</a>
     </div>
 
     <section class="footer-login">
